src/parser.y
%{
#include <bits/stdc++.h>
#include "ClassDefs.h"
int flag=0;
extern "C" int yylex();
extern "C" int yyparse();
extern "C" FILE *yyin;
extern "C" int line_num;
extern union Node yylval;
extern "C" int errors;
void yyerror(const char *s);
class Prog* start = NULL;
int errors=0;
%}

%start program
%token declaration_list
%token <value> ADD
%token <value> SUB
%token <value> MUL
%token <value> DIV
%token DECLBLOCK
%token statement_list
%token <number> NUMBER
%token <value> IDENTIFIER
%token ETOK
%token <value> INT
%token <value> ARRAY
%token PRINT
%token STRING
%token CODEBLOCK
%token <value> READ
%token <value>IF
%token <value>ELSE
%token <value>COMPARE
%token <value> EE
%token <value>GT
%token <value>LT
%token <value>GTE
%token <value>LTE
%token <value>AND
%token <value>OR
%token <value>WHILE
%token <value>FOR
%token LABEL
%token GOTO
%left '+'
%left '*'
%left '/'
%left '-'

%type <prog> program
%type <fields> decl_blocks
%type <field> decl_block
%type <vars> variables
%type <var> variable
%type <codes> code_blocks
%type <code> code_block
%type <exprnewsts> exprnew
%type <arthm> arithmetic
%type <exp> expr
%type <conds> conds
%type <cond> cond
%type <value> compare
%type <value> andor
%%

program: DECLBLOCK '{' decl_blocks '}' CODEBLOCK '{' code_blocks '}' {
  $$=new Prog($3,$7);
  start=$$;
};

decl_blocks: { $$ = new fieldDecls(); }
           | decl_blocks decl_block ';' { $$->push_back($2); };

decl_block:  | decl_block INT variables {$$=new fieldDecl($3);};

variables: variable { $$=new Vars();$$->push_back($1);}
           | variables ',' variable {$$->push_back($3);};

variable:  IDENTIFIER {$$ = new Var(string("Identifier"),string($1));cout<<$$->name<<"\n";}
           | ARRAY  {$$=new Var(string("Array"),string($1));cout<<$$->name<<"\n";};

code_blocks: { $$=new fieldCodes(); }
            | code_blocks code_block ';' {$$->push_back($2);};

code_block:print
		| read
		| expr {$$=$1;}
		| IF conds '{' code_blocks '}'  {$$=new ifelsest($2,$4,NULL);}
		| IF conds '{' code_blocks '}' ELSE '{' code_blocks '}'  {$$=new ifelsest($2,$4,$8);}
		| WHILE conds '{' code_blocks '}' {$$=new whilest($2,$4);}
		| FOR forloop '{' code_blocks '}'
		| LABEL
		| GOTO IDENTIFIER call


print: PRINT things
things:  IDENTIFIER
		| NUMBER
		| ARRAY
		| IDENTIFIER ',' things
		| NUMBER ',' things
		| ARRAY ',' things
		| STRING ',' things


read: READ thingsr
thingsr: IDENTIFIER
		| NUMBER
		| ARRAY
		| IDENTIFIER ',' thingsr
		| NUMBER ',' thingsr
		| ARRAY ',' thingsr

expr: IDENTIFIER '=' exprnew {$$=new expr($1,$3);}
		| ARRAY '=' exprnew {$$=new expr($1,$3);} ;

exprnew: arithmetic  {$$=new exprnewst($1); }
		| IDENTIFIER {$$=new exprnewst($1);}
		| NUMBER    {$$=new exprnewst($1);}
		| ARRAY     {$$=new exprnewst($1);};

arithmetic: exprnew ADD exprnew {$$=new arithmeticst($1,string($2),$3);}
		| exprnew SUB exprnew   {$$=new arithmeticst($1,string($2),$3);}
		| exprnew DIV exprnew   {$$=new arithmeticst($1,string($2),$3);}
		| exprnew MUL exprnew    {$$=new arithmeticst($1,string($2),$3);};

conds: {$$=new condsst();}  | conds cond {$$->push_back($2);};
cond: exprnew compare exprnew {$$=new condst($1,$2,$3);cout << $$->compopr << "\n";};
compare: GT {$$=$1;}
	| LT  {$$=$1;}
	| GTE  {$$=$1;}
	| LTE  {$$=$1;}
	| EE  {$$=$1;};

/*
andor:
    | AND {$$=$1;}
	  | OR {$$=$1;};
*/
forloop: IDENTIFIER '=' NUMBER ','  NUMBER inc
inc: ','  NUMBER
	|

call: IF cond |

%%


int main(int argc, char *argv[])
{
	if (argc == 1 ) {
		fprintf(stderr, "Correct usage: bcc filename\n");
		exit(1);
	}

	if (argc > 2) {
		fprintf(stderr, "Passing more arguments than necessary.\n");
		fprintf(stderr, "Correct usage: bcc filename\n");
	}

	yyin = fopen(argv[1], "r");

	yyparse();
	if(!flag)
		printf("Successfully parsed without any errors\n");
}
